part3/3.03-8/manifests/backend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-go-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-go-backend
  template:
    metadata:
      labels:
        app: todo-go-backend
    spec:
      containers:
        - name: todo-go-backend
          image: djblackett/backend:v2.10.2
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "50m"
              memory: "50Mi"
            limits:
              cpu: "200m"
              memory: "200Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: todo-go-backend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-go-backend
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8000 #
