part3/3.03-8/manifests/frontend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-go-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-go-frontend
  template:
    metadata:
      labels:
        app: todo-go-frontend
    spec:
      containers:
      - name: todo-go-frontend
        image: djblackett/frontend:v0.15
        resources:
          requests:
            cpu: "5m"
            memory: "5Mi"
          limits:
            cpu: "20m"
            memory: "20Mi"
        volumeMounts:
        #override config.js file
        - name: config
          mountPath: "/build/config.js"
          subPath: "config.js"
      volumes:
      - name: config
        configMap:
          name: web-config
          items:
          - key: "web.properties"
            path: "config.js"

---
apiVersion: v1
kind: Service
metadata:
  name: todo-go-frontend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-go-frontend # This is the app as declared in the deployment.
  ports:
  - port: 2345
    protocol: TCP
    targetPort: 8080
